--- a/src/app/sistema/components/clientes/clientes.component.html
+++ b/src/app/sistema/components/clientes/clientes.component.html
@@ -46,6 +46,9 @@
                     <th pSortableColumn="provincia" style="width:20%">
                         PROVINCIA <p-sortIcon field="provincia" />
                     </th>
+                    <th style="width:20%">
+                        #
+                    </th>
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-cliente>
@@ -58,6 +61,16 @@
                     <td class="text-nowrap">{{ cliente.localidad }}</td>
                     <td class="text-nowrap">{{ cliente.codigo_postal }}</td>
                     <td class="text-nowrap">{{ cliente.provincia }}</td>
+                    <td class="text-nowrap">
+                        <button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1 pt-1" title="VER STOCK"
+                            (click)="navigate('stock/' + cliente.id)"><i class="pi pi-box"></i></button>
+                        <button type="button" class="btn btn-sm btn-success m-0 mx-1 p-0 px-1 pt-1"
+                            title="NUEVO INGRESO DE MERCADERIA" (click)="navigate('ingresos/' + cliente.id)"><i
+                                class="pi pi-plus-circle"></i></button>
+                        <button type="button" class="btn btn-sm btn-danger m-0 mx-1 p-0 px-1 pt-1"
+                            title="NUEVO REMITO DE SALIDA" (click)="navigate('egresos/' + cliente.id)"><i
+                                class="pi pi-minus-circle"></i></button>
+                    </td>
                 </tr>
             </ng-template>
         </p-table>
