--- a/src/app/sistema/components/ingresos/ingresos.component.html
+++ b/src/app/sistema/components/ingresos/ingresos.component.html
@@ -9,8 +9,8 @@
     </div>
     <div class="row">
         <div class="col">
-            <p-multiSelect [ngStyle]="{padding: '0px'}" [options]="clientesTodos" [(ngModel)]="selectedClientes" optionLabel="alias"
-                placeholder="Seleccionar clientes" />
+            <p-multiSelect [ngStyle]="{padding: '0px'}" [options]="clientesTodos" [(ngModel)]="selectedClientes"
+                optionLabel="alias" placeholder="Seleccionar clientes" />
         </div>
     </div>
 
@@ -31,29 +31,46 @@
                 </tr>
             </thead>
             <tbody>
-                @for (ingreso of ingresos; track $index) {
-                <tr (dblclick)="mostrarModalIngreso(ingreso.id)">
-                    <th scope="row"><p-tag [value]="'INGRESO'" [severity]="true ? 'success' : 'danger'" /></th>
-                    <th scope="row">{{mostrarDocumento(ingreso.punto, ingreso.numero)}}</th>
-                    <td>{{ingreso.fecha}}</td>
-                    <td>{{ingreso.alias}}</td>
-                    <td>{{ingreso.cuit}}</td>
-                    <td>{{ingreso.autorizado_descripcion}}</td>
-                    <td>{{ingreso.transporte_transporte}}</td>
-                    <td>{{ingreso.establecimiento_descripcion}}</td>
-                    <td>{{ingreso.observaciones_sistema}}</td>
+                @for (registro of dataTabla; track $index) {
+                <tr
+                    (dblclick)="registro.tipo == 'INGRESO' ? mostrarModalIngreso(registro.id) : mostrarModalDevolucion({id_devolucion: registro.id})">
+                    <th scope="row"><p-tag [value]="registro.tipo"
+                            [severity]="registro.tipo == 'INGRESO' ? 'success' : 'danger'" /></th>
+                    <th scope="row">{{mostrarDocumento(registro.punto, registro.numero)}}</th>
+                    <td>{{registro.fecha}}</td>
+                    <td>{{registro.alias}}</td>
+                    <td>{{registro.cuit}}</td>
+                    <td>{{registro.autorizado_descripcion}}</td>
+                    <td>{{registro.transporte_transporte}}</td>
+                    <td>{{registro.establecimiento_descripcion}}</td>
+                    <td>{{registro.observaciones_sistema}}</td>
+                    @if (registro.tipo == 'INGRESO') {
                     <td><button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1 pt-1"
-                            (click)="mostrarModalIngreso(ingreso.id)" title="Ver Ingreso"><i
+                            (click)="mostrarModalIngreso(registro.id)" title="Ver Ingreso"><i
                                 class="pi pi-bars"></i></button>
                         <button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1 pt-1"
-                            (click)="verIngreso(ingreso.id)" title="Ver PDF"><i class="pi pi-file-pdf"></i>
+                            (click)="verIngreso(registro.id)" title="Ver PDF"><i class="pi pi-file-pdf"></i>
                         </button>
                         <button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1 pt-1"
-                            (click)="descargarIngreso(ingreso.id)" title="Descargar PDF"><i
+                            (click)="descargarIngreso(registro.id)" title="Descargar PDF"><i
                                 class="pi pi-download"></i></button>
                         <button type="button" class="btn btn-sm btn-danger m-0 mx-1 p-0 px-1 pt-1" title="ANULAR"
-                            (click)="mostrarModalDevolucion(ingreso.id)"><i class="pi pi-ban"></i></button>
+                            (click)="mostrarModalDevolucion({id_ingreso: registro.id})"><i
+                                class="pi pi-ban"></i></button>
                     </td>
+                    } @else {
+                    <td><button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1 pt-1"
+                            (click)="mostrarModalDevolucion({id_devolucion: registro.id})" title="Ver Devolucion"><i
+                                class="pi pi-bars"></i></button>
+                        <button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1 pt-1"
+                            (click)="verDevolucion(registro.id)" title="Ver PDF"><i class="pi pi-file-pdf"></i>
+                        </button>
+                        <button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1 pt-1"
+                            (click)="descargarDevolucion(registro.id)" title="Descargar PDF"><i
+                                class="pi pi-download"></i></button>
+                    </td>
+                    }
+
                 </tr>
                 }
             </tbody>
@@ -407,8 +424,8 @@
 
 
 <p-dialog header="{{devolucion.id ? 'VER DEVOLUCION' : 'NUEVA DEVOLUCION DE MERCADERIA'}}" [modal]="true"
-    [(visible)]="visible_devolucion" [style]="{ width: '85rem'}" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
-    [maximizable]="true" [closeOnEscape]="devolucion.id != ''">
+    [(visible)]="visible_devolucion" [style]="{ width: '95rem', height: '95rem'}"
+    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true" [closeOnEscape]="devolucion.id != ''">
 
     <!-- HEADERS -->
     <div class="row py-2" style="background-color: rgba(255, 183, 183, 0.555); border-radius: 6px;">
@@ -474,13 +491,7 @@
             <div class="col-12 col-md-4">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1" style="width: 15%;">Cód.</span>
-                    @if(!devolucion.id_cliente){
-                    <input type="text" class="form-control" placeholder="Código" aria-label="Código"
-                        aria-describedby="basic-addon1" [(ngModel)]="devolucion.codigo"
-                        (keyup.enter)="buscarClientePorCodigo()">
-                    } @else {
                     <span class="input-group-text" id="basic-addon1" style="width: 84%;">{{devolucion.codigo}}</span>
-                    }
                 </div>
             </div>
             <div class="col-12 col-md-8">
@@ -654,18 +665,29 @@
     <div class="table-responsive" style="max-height: 400px;">
         <table class="table table-striped table-hover table-sm">
             <thead>
-                <tr>
-                    <th scope="col" class="text-center">#</th>
-                    <th scope="col" class="text-center">Cód</th>
-                    <th scope="col" class="text-center">Descripción</th>
-                    <th scope="col" class="text-center">Cant. Inic.</th>
-                    <th scope="col" class="text-center">Entradas</th>
-                    <th scope="col" class="text-center">Salidas</th>
+                <tr class="table-bordered">
+                    <th scope="col" rowspan="2" class="text-center bord">#</th>
+                    <th scope="col" rowspan="2" class="text-center bord">Cód</th>
+                    <th scope="col" rowspan="2" class="text-center bord">Descripción</th>
+                    <th scope="col" colspan="4" class="text-center bord">Cant. Inic.</th>
+                    <th scope="col" colspan="4" class="text-center bord">Entradas</th>
+                    <th scope="col" colspan="4" class="text-center bord">Salidas</th>
+                    <th scope="col" colspan="4" class="text-center bord">A DEVOLVER</th>
 
-                    <th scope="col" class="text-center">Deposito</th>
-                    <th scope="col" class="text-center">Lote</th>
-                    <th scope="col" class="text-center">Vto</th>
-                    <th scope="col" class="text-center">#</th>
+                    <th scope="col" rowspan="2" class="text-center bord">Deposito</th>
+                    <th scope="col" rowspan="2" class="text-center bord">Lote</th>
+                    <th scope="col" rowspan="2" class="text-center bord">Vto</th>
+                    <th scope="col" rowspan="2" class="text-center bord">#</th>
+                </tr>
+                <tr class="table-bordered">
+                    <th scope="col" colspan="2" class="text-center bord">Unidades</th>
+                    <th scope="col" colspan="2" class="text-center bord">Unidad Fund.</th>
+                    <th scope="col" colspan="2" class="text-center bord">Unidades</th>
+                    <th scope="col" colspan="2" class="text-center bord">Unidad Fund.</th>
+                    <th scope="col" colspan="2" class="text-center bord">Unidades</th>
+                    <th scope="col" colspan="2" class="text-center bord">Unidad Fund.</th>
+                    <th scope="col" colspan="2" class="text-center bord">Unidades</th>
+                    <th scope="col" colspan="2" class="text-center bord">Unidad Fund.</th>
                 </tr>
             </thead>
             <tbody>
@@ -675,71 +697,97 @@
                         {{$index + 1}})</th>
                     <th scope="row" class="p-0" style="min-width: 100px;"><input class="input_tabla" type="text"
                             [(ngModel)]="artDev.codigo" disabled></th>
-                    <td class="text-nowrap p-0" style="min-width: 500px;">{{artDev.descripcion ? artDev.descripcion : '-'}}
+                    <td class="text-nowrap p-0" style="min-width: 500px;">{{artDev.descripcion ? artDev.descripcion :
+                        '-'}}
                     </td>
-                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.cantidad}}{{artDev.id_unidadMedida ?
-                        obtenerDescripcionUnidadMedida(artDev.id_unidadMedida) : '[*]'}} / {{artDev.cantidadUnidadFundamental}}{{artDev.unidadFundamental ?
-                            artDev.unidadFundamental : '[*]'}}</td>
-
-                    <td class="text-nowrap p-0 text-center" style="min-width: 90px;">{{artDev.salidas_uf}}</td>
 
 
-                    <td class="text-nowrap p-0 text-center" style="min-width: 90px;"></td>
+
+                    <!-- CANTIDAD INICIAL -->
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.cantidad}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.id_unidadMedida ?
+                        obtenerDescripcionUnidadMedida(artDev.id_unidadMedida) : '[*]'}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">
+                        {{artDev.cantidadUnidadFundamental}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.unidadFundamental ?
+                        artDev.unidadFundamental : '[*]'}}</td>
+
+
+
+                    <!-- ENTRADAS -->
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.entradas}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.id_unidadMedida ?
+                        obtenerDescripcionUnidadMedida(artDev.id_unidadMedida) : '[*]'}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">
+                        {{artDev.entradas_uf}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.unidadFundamental ?
+                        artDev.unidadFundamental : '[*]'}}</td>
+
+
+                    <!-- SALIDAS -->
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.salidas}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.id_unidadMedida ?
+                        obtenerDescripcionUnidadMedida(artDev.id_unidadMedida) : '[*]'}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">
+                        {{artDev.salidas_uf}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.unidadFundamental ?
+                        artDev.unidadFundamental : '[*]'}}</td>
+
+
+                    <!-- CANTIDAD A DEVOLVER -->
+                    <td class="text-nowrap p-0" style="min-width: 80px;"><input class="input_tabla" type="number"
+                            [(ngModel)]="artDev.cantidadDevolver" (keyup)="calcularUnidadFundamentalDevolucion(artDev)"
+                            (change)="calcularUnidadFundamentalDevolucion(artDev)" min="0"></td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.id_unidadMedida ?
+                        obtenerDescripcionUnidadMedida(artDev.id_unidadMedida) : '[*]'}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;"><input class="input_tabla" type="number"
+                            [(ngModel)]="artDev.cantidadDevolverUnidadFundamental" (keyup)="verificarMaxUF(artDev)"
+                            (change)="verificarMaxUF(artDev)" min="0"></td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.unidadFundamental ?
+                        artDev.unidadFundamental : '[*]'}}</td>
+
+
+
                     <td class="text-nowrap p-0">
-                        <select class="input_tabla p-1" [(ngModel)]="artDev.id_deposito" [disabled]="devolucion.id != ''">
+                        <select class="input_tabla p-1" [(ngModel)]="artDev.id_deposito" disabled>
                             @for (dep of depositos; track $index) {
                             <option value={{dep.id}}>{{dep.alias}}</option>
                             }
                         </select>
                     </td>
-                    <td class="text-nowrap p-0" style="min-width: 80px;">
-                        @if (artDev.solicitaLote) {
-                        <input class="input_tabla" type="text" [(ngModel)]="artDev.lote" [readonly]="devolucion.id != ''">
-                        }
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.lote ?
+                        artDev.lote : '-'}}
                     </td>
                     <td class="text-nowrap p-0" style="min-width: 80px;">
                         @if (artDev.solicitaVencimiento) {
-                        <input class="input_tabla" type="date" [(ngModel)]="artDev.vencimiento"
-                            [readonly]="devolucion.id != ''">
+                        <input class="input_tabla" type="date" [(ngModel)]="artDev.vencimiento" [readonly]="true">
                         }
                     </td>
-                    <td class="text-nowrap p-0">
-                        @if(artDev.id_articulo && devolucion.id == ''){
+                    <td>
                         <button type="button" class="btn btn-sm btn-danger m-0 mx-1 p-0 px-1"
-                            (click)="eliminarArticulo(artDev.id)"><i class="pi pi-trash"></i></button>
-                        }
+                            (click)="seleccionarDevolverTodo(artDev)"><i class="pi pi-list-check"></i></button>
                     </td>
                 </tr>
                 }
             </tbody>
         </table>
-
-        @if (devolucion.id == '') {
-        <button type="button" class="btn btn-success m-2 p-0 px-5" (click)="agregarArticulos()">Agregar nuevo</button>
-        @if (permite_secuencia_lote) {
-        AGREGAR
-        <input type="number" step="1" class="input_tabla" [(ngModel)]="cantidad_secuencia_lote" style="width: 60px;">
-        ARTICULOS TOMANDO LOS ULTIMOS
-        <input type="number" step="1" class="input_tabla" [(ngModel)]="digitos_secuencia_lote" style="width: 60px;">
-        DIGITOS DEL LOTE.
-        <button type="button" class="btn btn-primary m-2 p-0 px-2" (click)="agregarArticulosSecuencia()">Agregar
-            {{cantidad_secuencia_lote}}</button>
-        }
-        }
     </div>
 
     <div class="row">
         <div class="col text-end">
-            <button type="button" class="btn btn-warning m-2" (click)="verTotalesArticulosIngreso()">VER
-                TOTALES</button>
+
+            <button type="button" class="btn btn-warning m-2" (click)="seleccionarDevolverTodo()">SELECCIONAR
+                TODO</button>
             <button type="button" class="btn btn-warning m-2" (click)="visible_devolucion = false">CERRAR</button>
             @if (!devolucion.id) {
-            <button type="button" class="btn btn-success m-2" (click)="guardarIngreso('M')">GUARDAR Y MOSTRAR</button>
-            <button type="button" class="btn btn-success m-2" (click)="guardarIngreso('D')">GUARDAR Y DESCARGAR</button>
-            <button type="button" class="btn btn-success m-2" (click)="guardarIngreso()">GUARDAR</button>
+            <button type="button" class="btn btn-success m-2" (click)="guardarDevolucion('M')">GUARDAR Y
+                MOSTRAR</button>
+            <button type="button" class="btn btn-success m-2" (click)="guardarDevolucion('D')">GUARDAR Y
+                DESCARGAR</button>
+            <button type="button" class="btn btn-success m-2" (click)="guardarDevolucion()">GUARDAR</button>
             } @else {
-            <button type="button" class="btn btn-success m-2" (click)="verIngreso(devolucion.id)">VER PDF</button>
-            <button type="button" class="btn btn-success m-2" (click)="descargarIngreso(devolucion.id)">DESCARGAR
+            <button type="button" class="btn btn-success m-2" (click)="verDevolucion(devolucion.id)">VER PDF</button>
+            <button type="button" class="btn btn-success m-2" (click)="descargarDevolucion(devolucion.id)">DESCARGAR
                 PDF</button>
             }
 
