--- a/src/app/sistema/components/ingresos/ingresos.component.html
+++ b/src/app/sistema/components/ingresos/ingresos.component.html
@@ -3,20 +3,15 @@
         <div class="col">
             <button type="button" class="btn btn-primary m-2" (click)="mostrarModalIngreso()">NUEVO REMITO DE
                 INGRESO</button>
+            <button type="button" class="btn btn-success m-2" (click)="mostrarModalFiltro()">FILTROS</button>
             <!--button type="button" class="btn btn-primary m-2" (click)="totalesArticulosIngreso()">NUEVA DEVOLUCION DE
                 MERCADERIA</button-->
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <p-multiSelect [ngStyle]="{padding: '0px'}" [options]="clientesTodos" [(ngModel)]="selectedClientes"
-                optionLabel="alias" placeholder="Seleccionar clientes" />
         </div>
     </div>
 
 
     <div class="table-responsive">
-        <table class="table table-striped table-hover table-sm">
+        <table class="table table-striped table-hover table-sm table-bordered">
             <thead>
                 <tr>
                     <th scope="col">TIPO</th>
@@ -28,6 +23,7 @@
                     <th scope="col">TRANSPORTE</th>
                     <th scope="col">EST/ORIGEN</th>
                     <th scope="col">OBSERVACIONES</th>
+                    <th scope="col">#</th>
                 </tr>
             </thead>
             <tbody>
@@ -353,11 +349,12 @@
                     </td>
                     <td class="text-nowrap p-0" style="min-width: 80px;"><input class="input_tabla" type="number"
                             [(ngModel)]="art.cantidad" (keyup)="calcularUnidadFundamental(art)"
-                            [readonly]="ingreso.id != ''"></td>
+                            (change)="calcularUnidadFundamental(art)" [readonly]="ingreso.id != ''"></td>
                     <td class="text-nowrap p-0 text-center" style="min-width: 90px;">{{art.id_unidadMedida ?
                         obtenerDescripcionUnidadMedida(art.id_unidadMedida) : '-'}}</td>
                     <td class="text-nowrap p-0" style="min-width: 80px;"><input class="input_tabla" type="number"
-                            [(ngModel)]="art.cantidadUnidadFundamental" [readonly]="ingreso.id != ''"></td>
+                            [(ngModel)]="art.cantidadUnidadFundamental" [readonly]="ingreso.id != ''"
+                            (change)="ingreso.total_unidades = totalesArticulosIngreso()"></td>
                     <td class="text-nowrap p-0 text-center" style="min-width: 90px;">{{art.unidadFundamental ?
                         art.unidadFundamental : '-'}}</td>
                     <td class="text-nowrap p-0">
@@ -403,14 +400,49 @@
         }
     </div>
 
+    @if (documentosAsociados.length) {
+    <p-divider align="left" type="solid" class="m-0 p-0" [style]="{'margin': '20px 0px'}">
+        <b>Documentos asociados</b>
+    </p-divider>
+
+    @for (docAsoc of documentosAsociados; track $index) {
+    <div class="card mb-1 p-1">
+        <div class="row">
+            <div class="col">
+                <strong>DEVOLUCION</strong>
+            </div>
+            <div class="col">
+                <strong>{{mostrarDocumento(docAsoc.punto, docAsoc.numero)}}</strong>
+            </div>
+            <div class="col">
+                {{docAsoc.fecha}}
+            </div>
+            <div class="col">
+                <button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1 pt-1"
+                    (click)="mostrarModalDevolucion({id_devolucion: docAsoc.id})" title="Ver Devolucion"><i
+                        class="pi pi-bars"></i></button>
+                <button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1 pt-1"
+                    (click)="verDevolucion(docAsoc.id)" title="Ver PDF"><i class="pi pi-file-pdf"></i>
+                </button>
+                <button type="button" class="btn btn-sm btn-primary m-0 mx-1 p-0 px-1 pt-1"
+                    (click)="descargarDevolucion(docAsoc.id)" title="Descargar PDF"><i
+                        class="pi pi-download"></i></button>
+            </div>
+        </div>
+    </div>
+    }
+    }
+
     <div class="row">
         <div class="col text-end">
             <button type="button" class="btn btn-warning m-2" (click)="verTotalesArticulosIngreso()">VER
                 TOTALES</button>
             <button type="button" class="btn btn-warning m-2" (click)="visible_ingreso = false">CERRAR</button>
             @if (!ingreso.id) {
-            <button type="button" class="btn btn-success m-2" (click)="guardarIngreso('M')">GUARDAR Y MOSTRAR</button>
-            <button type="button" class="btn btn-success m-2" (click)="guardarIngreso('D')">GUARDAR Y DESCARGAR</button>
+            <button type="button" class="btn btn-success m-2" (click)="guardarIngreso('M')">GUARDAR Y
+                MOSTRAR</button>
+            <button type="button" class="btn btn-success m-2" (click)="guardarIngreso('D')">GUARDAR Y
+                DESCARGAR</button>
             <button type="button" class="btn btn-success m-2" (click)="guardarIngreso()">GUARDAR</button>
             } @else {
             <button type="button" class="btn btn-success m-2" (click)="verIngreso(ingreso.id)">VER PDF</button>
@@ -664,6 +696,68 @@
     <!-- TABLA ARTICULOS -->
     <div class="table-responsive" style="max-height: 400px;">
         <table class="table table-striped table-hover table-sm">
+            @if(devolucion.id){
+            <thead>
+                <tr class="table-bordered">
+                    <th scope="col" rowspan="2" class="text-center bord">#</th>
+                    <th scope="col" rowspan="2" class="text-center bord">Cód</th>
+                    <th scope="col" rowspan="2" class="text-center bord">Descripción</th>
+                    <th scope="col" colspan="4" class="text-center bord">Cant. Devuelta</th>
+
+                    <th scope="col" rowspan="2" class="text-center bord">Deposito</th>
+                    <th scope="col" rowspan="2" class="text-center bord">Lote</th>
+                    <th scope="col" rowspan="2" class="text-center bord">Vto</th>
+                </tr>
+                <tr class="table-bordered">
+                    <th scope="col" colspan="2" class="text-center bord">Unidades</th>
+                    <th scope="col" colspan="2" class="text-center bord">Unidad Fund.</th>
+                </tr>
+            </thead>
+            <tbody>
+                @for (artDev of articulosDevolucion; track $index) {
+                <tr>
+                    <th scope="row" class="p-0 text-end align-middle" style="font-size: small; color: rgb(88, 88, 88);">
+                        {{$index + 1}})</th>
+                    <th scope="row" class="p-0" style="min-width: 100px;"><input class="input_tabla" type="text"
+                            [(ngModel)]="artDev.codigo" disabled></th>
+                    <td class="text-nowrap p-0" style="min-width: 500px;">{{artDev.descripcion ? artDev.descripcion :
+                        '-'}}
+                    </td>
+
+
+
+                    <!-- CANTIDAD DEVULETA -->
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.cantidad}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.id_unidadMedida ?
+                        obtenerDescripcionUnidadMedida(artDev.id_unidadMedida) : '[*]'}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">
+                        {{artDev.cantidadUnidadFundamental}}</td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.unidadFundamental ?
+                        artDev.unidadFundamental : '[*]'}}</td>
+
+
+
+
+
+                    <td class="text-nowrap p-0">
+                        <select class="input_tabla p-1" [(ngModel)]="artDev.id_deposito" disabled>
+                            @for (dep of depositos; track $index) {
+                            <option value={{dep.id}}>{{dep.alias}}</option>
+                            }
+                        </select>
+                    </td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">{{artDev.lote ?
+                        artDev.lote : '-'}}
+                    </td>
+                    <td class="text-nowrap p-0" style="min-width: 80px;">
+                        @if (artDev.solicitaVencimiento) {
+                        <input class="input_tabla" type="date" [(ngModel)]="artDev.vencimiento" [readonly]="true">
+                        }
+                    </td>
+                </tr>
+                }
+            </tbody>
+            } @else {
             <thead>
                 <tr class="table-bordered">
                     <th scope="col" rowspan="2" class="text-center bord">#</th>
@@ -770,16 +864,16 @@
                 </tr>
                 }
             </tbody>
+            }
         </table>
     </div>
 
     <div class="row">
         <div class="col text-end">
-
-            <button type="button" class="btn btn-warning m-2" (click)="seleccionarDevolverTodo()">SELECCIONAR
-                TODO</button>
             <button type="button" class="btn btn-warning m-2" (click)="visible_devolucion = false">CERRAR</button>
             @if (!devolucion.id) {
+            <button type="button" class="btn btn-warning m-2" (click)="seleccionarDevolverTodo()">SELECCIONAR
+                TODO</button>
             <button type="button" class="btn btn-success m-2" (click)="guardarDevolucion('M')">GUARDAR Y
                 MOSTRAR</button>
             <button type="button" class="btn btn-success m-2" (click)="guardarDevolucion('D')">GUARDAR Y
@@ -1096,5 +1190,72 @@
             </table>
         </div>
         }
+    </div>
+</p-dialog>
+
+
+<p-dialog header="FILTRAR" [modal]="true" [(visible)]="visible_filtros" [style]="{ width: '70rem'}"
+    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
+
+    <div class="row py-2">
+        <div class="col-12 col-md-6">
+            <p-divider align="left" type="solid" class="m-0 p-0" [style]="{'margin': '5px 0px'}">
+                <b>Selecciona uno o varios clientes:</b> (Todos: CTRL + A)
+            </p-divider>
+        
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1" style="width: 15%;">Buscar</span>
+                <input type="text" class="form-control" placeholder="Alias / Razon Social" aria-label="Alias / Razon Social"
+                    aria-describedby="basic-addon1" [(ngModel)]="searchValue_cliente" (change)="clienteFiltro()" (keyup)="clienteFiltro()">
+            </div>
+            <div class="form-group">
+                <select id="clientes" class="form-control" multiple [(ngModel)]="selectedClientes"
+                    style="height: 400px;">
+                    @for (item of clientesFiltrados; track $index) {
+                    <option value="{{item.id}}">{{item.alias}} ({{item.razon_social}})</option>
+                    }
+                </select>
+            </div>
+        </div>
+        <div class="col-12 col-md-6">
+            <p-divider align="left" type="solid" class="m-0 p-0" [style]="{'margin': '5px 0px'}">
+                <b>Fecha:</b>
+            </p-divider>
+
+            <div class="row my-2">
+                <div class="col text-center">
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button type="button" class="btn btn-outline-primary" (click)="fechaFiltro(0)">HOY</button>
+                        <button type="button" class="btn btn-outline-primary" (click)="fechaFiltro(7)">ULTIMA SEMANA</button>
+                        <button type="button" class="btn btn-outline-primary" (click)="fechaFiltro(31)">ULTIMO MES</button>
+                        <button type="button" class="btn btn-outline-primary" (click)="fechaFiltro(365)">ULTIMO AÑO</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row my-5">
+                <div class="col">
+                    <div class="input-group">
+                        <span class="input-group-text" id="basic-addon1">DESDE</span>
+                        <input type="date" class="form-control" placeholder="FECHA" aria-label="FECHA"
+                            aria-describedby="basic-addon1" [(ngModel)]="fechaFiltroDesde">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="input-group">
+                        <span class="input-group-text" id="basic-addon1">HASTA</span>
+                        <input type="date" class="form-control" placeholder="FECHA" aria-label="FECHA"
+                            aria-describedby="basic-addon1" [(ngModel)]="fechaFiltroHasta">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col text-end">
+            <button type="button" class="btn btn-warning m-2" (click)="visible_filtros = false">CERRAR</button>
+
+            <button type="button" class="btn btn-success m-2" (click)="filtrar()">APLICAR</button>
+        </div>
     </div>
 </p-dialog>
