--- a/src/app/sistema/components/ingresos/ingresos.component.html
+++ b/src/app/sistema/components/ingresos/ingresos.component.html
@@ -8,13 +8,16 @@
                     class="pi pi-file-excel me-2"></i>LISTADO</button>
             <button type="button" class="btn btn-success m-2" (click)="detalleXLSX()"><i
                     class="pi pi-file-excel me-2"></i>REPORTE</button>
+            <button type="button" class="btn btn-success m-2" (click)="datosXLSX()"><i
+                    class="pi pi-file-excel me-2"></i>DATOS</button>
             <!--button type="button" class="btn btn-primary m-2" (click)="totalesArticulosIngreso()">NUEVA DEVOLUCION DE
                 MERCADERIA</button-->
         </div>
     </div>
 
     <p>
-        Mostrando {{dataTabla.length}} registros. Fecha: <strong>{{fechasFiltradas}}</strong>. Clientes: <strong>{{clienteFiltrados}}</strong>
+        Mostrando {{dataTabla.length}} registros. Fecha: <strong>{{fechasFiltradas}}</strong>. Clientes:
+        <strong>{{clienteFiltrados}}</strong>
     </p>
 
 
